[gd_scene load_steps=2 format=3 uid="uid://quest_log_001"]

[ext_resource type="Script" path="res://ui/quest/quest_log.gd" id="1_quest_log"]

[node name="QuestLog" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_quest_log")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "QUEST LOG"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ActiveQuests" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HeaderLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentContainer/ActiveQuests"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 11
text = "— ACTIVE QUESTS —"

[node name="QuestsList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer/ActiveQuests"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CompletedQuests" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HeaderLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentContainer/CompletedQuests"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "— COMPLETED QUESTS —"

[node name="QuestsList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer/CompletedQuests"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AvailableQuests" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HeaderLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentContainer/AvailableQuests"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 11
text = "— AVAILABLE QUESTS —"

[node name="QuestsList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer/AvailableQuests"]
layout_mode = 2
theme_override_constants/separation = 8
